# NeuroResolv

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_v2_schema.py  323f38f90688_remove_learning_sources_from_resolutions.py  4a2b3c4d5e6f_add_roadmap_improvements_schema.py  94dff1cc9cdd_add_weekly_focus_table.py
backend/app/: config.py  schemas.py
backend/app/agents/: __init__.py  adaptive_agent.py  negotiation_agent.py  north_star_agent.py  quiz_agent.py  roadmap_agent.py  syllabus_agent.py  verification_agent.py  weekly_goal_agent.py
backend/app/api/: __init__.py  auth.py  progress.py  resolutions.py  sessions.py
backend/app/aws/: __init__.py  secrets.py
backend/app/core/: __init__.py  security.py
backend/app/db/: __init__.py  database.py  init_db.py  models.py
backend/app/observability/: __init__.py  opik_integration.py
backend/app/services/: __init__.py  content_processor.py  vector_store.py  voice_transcription.py
backend/test/: test_negotiation.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AIFeedback.css  AIFeedback.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: CheckinPage.css  CheckinPage.jsx  CreateModal.css  DashboardPage.css  DashboardPage.jsx  LoginPage.css  LoginPage.jsx  QuizPage.css  QuizPage.jsx  RegisterPage.jsx  (+6 more)
tasks/: README.md
(+1 files in other folders)
